--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
   },
   "devDependencies": {
     "vite": "^5.2.11"
+  },
+  "scripts": {
+    "build": "vite build",
+    "preview": "vite preview"
   }
 }
